--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="app.js"></script>
+    <script src="js/closures.js"></script>
 </head>  
-<body>
+<body style="background-color: rgb(37, 37, 37);">
     
 </body>
 </html>
